--- a/SensorsOrientation.html
+++ b/SensorsOrientation.html
@@ -40,8 +40,8 @@
 <div class="jumbotron">
 	<div class="row">
 	<div class="col-md-8">
-		<h1>Programming</h1>
-		<p>Sensors</p>
+		<h1>Sensors</h1>
+		<p>Sensing and Interrupt Service Routines</p>
 	</div>
 	</div>
 	<SCRIPT TYPE="text/javascript">
@@ -60,7 +60,24 @@ return false;
 //-->
 </SCRIPT>
 </div>
+<h3>Objectives</h3>
+<p>After this chapter you should be able to:</p>
+<UL>
+<LI>Explain why sensors are important</LI>
+<LI>Identify different kinds of sensors and their applications</LI>
+<LI>Describe Interrupt Service Routines and when they are appropriate</LI>
+</UL>
+<br><br>
+<h3>Potentiometer</h3>
+<p>Potentiometers are variable resistors that can be used as a sensor. The main type of potentiometer is controlled by a dial that increases or decreases resistance as it is turned. Another common type of potentiometer is controlled by a linear sliding wiper. The term “wiper” refers to the part of the potentiometer that is actually limiting the resistance. While potentiometers are not always used as sensors, they can be useful for determining forces acting on an object or the distance from an object. As the object pushes on the potentiometer and moves the wiper, the output resistance of changes and therefore the voltage affected by that resistance changes. By knowing the range of the potentiometer and the total change in voltage (which would come from calibrating the system), you can tell the amount of force on an object and even how far away the object is.</p>
+<br>
+<h3>Gyro</h3>
+<p>Gyros measure the rate of rotation in a particular axis. Gyros have three main sensing applications. First, they can be used to sense the angular velocity of a component. Second, they can sense the angle that a certain component, subsystem, or entire system is at. Third, they can be used in control systems to sense the orientation or balance of an object and outputting signal to tell the system to correct those things. </p>
+<br>
+<h3>Encoder</h3>
+<p>An encoder can be used to determine position, velocity, or acceleration of a system from a given starting point. Angular or shaft encoders take the angular position of a shaft and convert it to either an analog or a digital code. There are two types of encoders: absolute and incremental. Incremental encoders give the program information about the relative changes in the shaft which can then be worked with to determine other information. Absolute encoders indicate the current position of the shaft and can maintain that position information even when power is removed. Vex encoders are incremental; you can track changes in the angle of the shaft as it moves to determine position. Further, you can compare the changes in position relative to time to find velocity and so on. </p>
 
+<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/ISR.html">To read about Interrupt Service Routines click here!</A>
 
 <!-- CONTENT END -->
 </div>
