Remove local references

--- a/Programming.html
+++ b/Programming.html
@@ -74,8 +74,8 @@ return false;
 <h2>Constants and Variables</h2>
 <p>Constants are values in a program that cannot change throughout a program’s execution. When a constant is defined, a program essentially just sees the constant and pastes the defined value into the function instead. Constants can be initialized using pound-define (#define) and are usually declared in all capital letters. Variables are locations in memory for storing values and can change over time. All variables have a type (int, long, char, etc.) and a visibility: global or local. Further, variables in certain instances can be static.</p>
 
-      <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Local&Global.html" 
-   onClick="return popup(this, 'Local and Global Variables')"><center><img src="Programming_Popups/Programming_Pictures/Local&Global.png"  HEIGHT="400px" /img></center></A>
+      <A HREF="file:Programming_Popups/Local&Global.html" 
+   onClick="return popup(this, 'Local and Global Variables')"><center><img src="Programming_Popups/Programming_Pictures/Local&Global.PNG"  HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Local and Global Variables</span></center>
 <br><br>
 
@@ -87,8 +87,8 @@ return false;
       <TD WIDTH=70% ALIGN=LEFT> 
 	  <p>Visibility refers to where or how the variable is declared; the two kinds of visibility are global and local. Global variables are declared at the top of a program and are accessible throughout the entire program and all related functions. Local variables are defined inside a certain function, state, or other small part of a program and are not accessible beyond the outer limits of whatever they are declared in. </p>
 	  <p>In the picture on the right, notice the line highlighted in yellow and the Arduino error message. This will occur if you try to access a local variable outside of where it is defined.</p></TD>
-      <TD WIDTH=20% ALIGN=RIGHT><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/LocalNotDefined.html" 
-   onClick="return popup(this, 'Error - Local Variable Not Defined')"><img src="Programming_Pictures/LocalNotDefined.png" HEIGHT="400px" /img></A>
+      <TD WIDTH=20% ALIGN=RIGHT><A HREF="file:Programming_Popups/LocalNotDefined.html" 
+   onClick="return popup(this, 'Error - Local Variable Not Defined')"><img src="Programming_Pictures/LocalNotDefined.PNG" HEIGHT="400px" /img></A>
    </TD>
    </TR>
    <TR>
@@ -103,12 +103,12 @@ return false;
 
 <TABLE ALIGN=CENTER>
 <TR>
-	<TD WIDTH=50% ALIGN=CENTER> <img src="Programming_Pictures/Static.png" HEIGHT="400px" /img> </TD>
-	<TD WIDTH=100% ALIGN=LEFT> <img src="Programming_Pictures/StaticOutput.png" HEIGHT="300x" /img> </TD>
+	<TD WIDTH=50% ALIGN=CENTER> <img src="Programming_Pictures/Static.PNG" HEIGHT="400px" /img> </TD>
+	<TD WIDTH=100% ALIGN=LEFT> <img src="Programming_Pictures/StaticOutput.PNG" HEIGHT="300x" /img> </TD>
 </TR>
 </TABLE>
 <center><span class="captionStyle">Static Variables and Serial Output</span></center>
-<br><br>
+<br><br
 
 <p>Finally, it is important to remember that variables are case sensitive. The common format for naming a variable is called “camel case” and consists of the first (or only) word in lower case and any additional words beginning with an uppercase letter. Variable names never have spaces; underscores are an acceptable alternative. </p>
 
@@ -118,13 +118,13 @@ return false;
 
 <p>Arithmetical operators consist of adding (+), subtracting (-), multiplying (*), dividing (/), and modulo (%). Modulo gives the remainder after a division. For example, having an operation 5%3 would mean to divide 5 by 3 and output the remainder (2). Arithmetical operators can be combined as a sort of short-hand to make programs look cleaner: +=, -=, *=, /=. A short-hand operator can be used with two values where at least one is a variable: for example “a” and 5. The code would be written as “a += 5;” and it means “a” equals the sum of “a” and 5. Therefore, if “a” had been equal to 11 before that line, it would now be equal to 17. Each short-hand operator works much in this way. </p>
 <br><br>
-	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Arithmetic.html" 
-   onClick="return popup(this, 'Arithmetical Operators')"><center><img src="Programming_Popups/Programming_Pictures/Arithmetic.png" HEIGHT="400" /img></center></A>
+	 <A HREF="file:Programming_Popups/Arithmetic.html" 
+   onClick="return popup(this, 'Arithmetical Operators')"><center><img src="Programming_Popups/Programming_Pictures/Arithmetic.PNG" HEIGHT="400" /img></center></A>
    <center><span class="captionStyle">Arithmetic Operators</span></center>
 <br><br>
 <p>Relational operators consist mainly of less than (<), greater than (>), is equal to (==), and not (!). Relational operators “less than” and “greater than” can be combined with “equals” to achieve “less than or equal to” and “greater than or equal to.” “Not” can be combined with any of “less than,” “greater than,” and “equal to.” It is also important to note that when comparing two values to see if they are equal, a program must use two equal signs; using only one equals sign will simply reassign your variable rather than comparing it. </p>
-	 <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/Relational.html" 
-   onClick="return popup(this, 'Relational Operators')"><center><img src="Programming_Popups/Programming_Pictures/Relational.png" HEIGHT="400px" /img></center></A>
+	 <A HREF="file:Programming_Popups/Relational.html" 
+   onClick="return popup(this, 'Relational Operators')"><center><img src="Programming_Popups/Programming_Pictures/Relational.PNG" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Relational Operators</span></center>
 <br><br>
 
@@ -132,21 +132,21 @@ return false;
 
 <h3> If-Statements</h3>
 <h4>Syntax</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
-   onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/If.png" HEIGHT="75px" /img></A>
+<A HREF="file:Programming_Popups/IfStatement.html" 
+   onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/If.PNG" HEIGHT="75px" /img></A>
    <br>
 <h4>What Are They?</h4>
    <p>If-statements are tools that execute other statements if a certain condition is met. If-statements can be stand-alone; this means that they are only looking for one condition and executing in that specific case. They can also be used with an else-statement that serves as a catch-all for every instance when the condition isn’t met. </p>
 
 <h4>Example:</h4>
-<center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfExample.html" 
-   onClick="return popup(this, 'If-Statement Example')"><img src="Programming_Popups/Programming_Pictures/IfExample.png" HEIGHT="400px" /img></A></center>
+<center><A HREF="file:Programming_Popups/IfExample.html" 
+   onClick="return popup(this, 'If-Statement Example')"><img src="Programming_Popups/Programming_Pictures/IfExample.PNG" HEIGHT="400px" /img></A></center>
    <center><span class="captionStyle">Example Using If-Statement in Arduino</span></center>
    <center><p> What will this code print? Click on it for the answer</p></center>
 <br>
 <p>When a function or program needs to check more than one condition, an else-if can be implemented.</p>
-<center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
-   onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/elseIf.png" HEIGHT="200px" /img></A></center>
+<center><A HREF="file:Programming_Popups/IfStatement.html" 
+   onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/elseIf.PNG" HEIGHT="200px" /img></A></center>
    <center><span class="captionStyle">If Statement Using "else if" in Arduino</span></center>
 <p>Finally, sometimes there is a need to use an if-statement inside an if-statement. These are effective but not efficient. State machines are the cleaner way to accomplish the same goal. Find more information on state machines <A HREF="users.wpi.edu/~RBE1001book/StateMachines">here</A></p>
 
@@ -156,45 +156,45 @@ return false;
 
 <h3>While-Loops</h3>
 <h4>Syntax:</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/LoopSyntax.html" 
-   onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/While.png" HEIGHT="150px" /img></A>
+<A HREF="file:Programming_Popups/LoopSyntax.html" 
+   onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/While.PNG" HEIGHT="150px" /img></A>
    
 <h4>What Are They?</h4>
 <p>While-loops are a type of loop that continues as long as a Boolean statement is true. The program runs through the loop checking the condition before running through each time. When the condition is found to be false, the loop “breaks” or stops repeating those statements and moves on to the next statement or function in the program. </p>
 <h4>Example</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
-   onClick="return popup(this, 'While-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/WhileExample.png" HEIGHT="400px" /img></center></A>
+<A HREF="file:Programming_Popups/WhileExample.html" 
+   onClick="return popup(this, 'While-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/WhileExample.PNG" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Example of While-Loop Using Arduino</span></center>
    <center><p>Click on program to see how variable values will change</p>
    <p>Note: Print statements have been removed from this code for clarity</p></center>
 <br>
 <h3>For-Loops</h3>
 <h4>Syntax:</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/LoopSyntax.html" 
-   onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/ForSyntax.png" HEIGHT="75px" /img></A>
+<A HREF="file:Programming_Popups/LoopSyntax.html" 
+   onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/ForSyntax.PNG" HEIGHT="75px" /img></A>
 <h4>What Are They?</h4>
 <p>For-loops are loops that run a specified number of times before moving on to the next part of the code. For-loops have an index variable that simply keeps track of how many times the loop has run and either increments or decrements at the beginning of the loop. After adjusting the index variable, the loop then checks a conditional statement that compares the index to some pre-defined value; as long as the statement is true, the loop will run.</p>
 <h4>Example</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
-   onClick="return popup(this, 'For-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/ForExample.png" HEIGHT="400px" /img></center></A>
+<A HREF="file:Programming_Popups/WhileExample.html" 
+   onClick="return popup(this, 'For-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/ForExample.PNG" HEIGHT="400px" /img></center></A>
 	<center><span class="captionStyle">Example of For-Loop Using Arduino</span></center>
-   <center><p>What will this code print? Click on it for the answer</p></center>
+   <center><p>hat will this code print? Click on it for the answer</p></center>
 
 <h3>Break and Continue</h3>
 <p>Break is a tool that can stop a loop at any point, usually given a certain condition. When break is triggered, the program will move to the first lines below the loop and execute them. For example:</p>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
-   onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/break.png" HEIGHT="25px" /img></center></A>
+<A HREF="file:Programming_Popups/BreakAndContinue.html" 
+   onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/break.PNG" HEIGHT="25px" /img></center></A>
    <br>
-   <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
-   onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/BreakExample.png" HEIGHT="400px" /img></center></A>
+   <A HREF="file:Programming_Popups/BreakAndContinue.html" 
+   onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/BreakExample.PNG" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Using Break with Arduino</span></center>
    <br><br>
 <p>Continue is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top. For example:</p>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
-   onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/ContinueSyntax.png" HEIGHT="25px" /img></center></A>
+<A HREF="file:Programming_Popups/BreakAndContinue.html" 
+   onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/ContinueSyntax.PNG" HEIGHT="25px" /img></center></A>
    <br>
-   <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
-   onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/Continue.png" HEIGHT="400px" /img></center></A>
+   <A HREF="file:Programming_Popups/BreakAndContinue.html" 
+   onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/Continue.PNG" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Using Continue in Arduino</span></center>
 
 <!-- CONTENT END -->
