Change footer to name the project

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
 	<div class="container">
-		<p class="text-muted">Powered by <a href="http://getbootstrap.com">Bootstrap</a></p>
+		<p class="text-muted">This site is part of The RBE 1001 E-Textbook Interactive Qualifying Project. By using this site, you agree to our Terms of Service</p>
 	</div>
 </div>
