Link to about page in footer

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
 	<div class="container">
-		<p class="text-muted">This site is part of The RBE 1001 E-Textbook Interactive Qualifying Project. By using this site, you agree to our Terms of Service</p>
+		<p class="text-muted">This site is part of The RBE 1001 E-Textbook Interactive Qualifying Project. By using this site, you agree to our <a href="about.html">Terms of Service</a></p>
 	</div>
 </div>
