--- a/Programming_Popups/IfExample.html
+++ b/Programming_Popups/IfExample.html
@@ -37,9 +37,9 @@
 <br/>
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
-<img src="Programming_Pictures/IfExample.png" HEIGHT="500px" /img>
+<img src="Programming_Pictures/IfExample.PNG" HEIGHT="500px" /img>
 <br><br>
-<img src="Programming_Pictures/IfOutput.png" HEIGHT="300px" /img>
+<img src="Programming_Pictures/IfOutput.PNG" HEIGHT="300px" /img>
 <!-- CONTENT END -->
 </div>
 
