--- a/Programming_Popups/IfStatement.html
+++ b/Programming_Popups/IfStatement.html
@@ -38,15 +38,15 @@
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
 <p>If-Statement</p>
-<img src="Programming_Pictures/If.png" HEIGHT="50px" /img>
+<img src="Programming_Pictures/If.PNG" HEIGHT="50px" /img>
 <br>
 <br>
 <p>If-Else-Statement</p>
-<img src="Programming_Pictures/Else.png" HEIGHT="115px" /img>
+<img src="Programming_Pictures/Else.PNG" HEIGHT="115px" /img>
 <br>
 <br>
 <p>If-Statement with elseIf</p>
-<img src="Programming_Pictures/elseIf.png" HEIGHT="175px" /img>
+<img src="Programming_Pictures/elseIf.PNG" HEIGHT="175px" /img>
 <!-- CONTENT END -->
 </div>
 
