--- a/Programming_Popups/LocalNotDefined.html
+++ b/Programming_Popups/LocalNotDefined.html
@@ -38,7 +38,7 @@
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
 
-<center><img src="Programming_Pictures/LocalNotDefined.png" HEIGHT="600px" /img></center>
+<center><img src="Programming_Pictures/LocalNotDefined.PNG" HEIGHT="600px" /img></center>
 
 <!-- CONTENT END -->
 </div>
