--- a/Programming_Popups/LoopSyntax.html
+++ b/Programming_Popups/LoopSyntax.html
@@ -39,10 +39,10 @@
 <!-- CONTENT BEGIN -->
 <h3>Loop Syntax</h3>
 <p>While-Loops</p>
-<img src="Programming_Pictures/While.png" HEIGHT="200px" /img>
+<img src="Programming_Pictures/While.PNG" HEIGHT="200px" /img>
 <br>
 <p>For-Loops</p>
-<img src="Programming_Pictures/ForSyntax.png" HEIGHT="50px" /img>
+<img src="Programming_Pictures/ForSyntax.PNG" HEIGHT="50px" /img>
 
 <!-- CONTENT END -->
 </div>
