--- a/Programming_Popups/Relational.html
+++ b/Programming_Popups/Relational.html
@@ -38,7 +38,7 @@
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
 
-<img src="Programming_Pictures/Relational.png" HEIGHT="600px" /img>
+<img src="Programming_Pictures/Relational.PNG" HEIGHT="600px" /img>
 
 <!-- CONTENT END -->
 </div>
