--- a/Programming_Popups/WhileSyntax.html
+++ b/Programming_Popups/WhileSyntax.html
@@ -37,7 +37,7 @@
 <br/>
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
-<img src="Programming_Pictures/While.png" HEIGHT="200px" /img>
+<img src="Programming_Pictures/While.PNG" HEIGHT="200px" /img>
 <!-- CONTENT END -->
 </div>
 
