--- a/Programming_Popups/ForExample.html
+++ b/Programming_Popups/ForExample.html
@@ -37,9 +37,9 @@
 <br/>
 <div class="container theme-showcase" role="main">
 <!-- CONTENT BEGIN -->
-<img src="Programming_Pictures/WhileExample.png" HEIGHT="500px" /img>
+<img src="Programming_Pictures/WhileExample.PNG" HEIGHT="500px" /img>
 <br><br>
-<img src="Programming_Pictures/WhileOutput.png" HEIGHT="300px" /img>
+<img src="Programming_Pictures/WhileOutput.PNG" HEIGHT="300px" /img>
 <!-- CONTENT END -->
 </div>
 
