Adds links to pags in body

--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
 	<div class="row">
 	<div class="col-md-8">
 		<h1>RBE 1001 E-Textbook</h1>
-		<p>This is the website for the e-textbook</p>
+		<p>Table of Contents</p>
 	</div>
 	</div>
 </div>
+
+<p><a href="Circuits.html">Circuits</a></p>
+<p><a href="Programming.html">Programming</a></p>
+<p><a href="Sensors.html">Sensors</a></p>
 <!-- CONTENT END -->
 </div>
 
