Fixed the Pop-up Thing

--- a/LogicAndLoops.html
+++ b/LogicAndLoops.html
@@ -41,7 +41,7 @@
 	<div class="row">
 	<div class="col-md-8">
 		<h1>Programming</h1>
-		<p>Introduction to Programming in C and Arduino</p>
+		<p>Logic and Loops</p>
 	</div>
 	</div>
 	<SCRIPT TYPE="text/javascript">
@@ -74,20 +74,20 @@ return false;
 
 <h3> If-Statements</h3>
 <h4>Syntax</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
+<A HREF="Programming_Popups/IfStatement.html" 
    onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/If.png" HEIGHT="75px" /img></A>
    <br>
 <h4>What Are They?</h4>
    <p>If-statements are tools that execute other statements if a certain condition is met. If-statements can be stand-alone; this means that they are only looking for one condition and executing in that specific case. They can also be used with an else-statement that serves as a catch-all for every instance when the condition isn’t met. </p>
 
 <h4>Example:</h4>
-<center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfExample.html" 
+<center><A HREF="Programming_Popups/IfExample.html" 
    onClick="return popup(this, 'If-Statement Example')"><img src="Programming_Popups/Programming_Pictures/IfExample.png" HEIGHT="400px" /img></A></center>
    <center><span class="captionStyle">Example Using If-Statement in Arduino</span></center>
    <center><p> What will this code print? Click on it for the answer</p></center>
 <br>
 <p>When a function or program needs to check more than one condition, an else-if can be implemented.</p>
-<center><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/IfStatement.html" 
+<center><A HREF="Programming_Popups/IfStatement.html" 
    onClick="return popup(this, 'If-Statement Syntax')"><img src="Programming_Popups/Programming_Pictures/elseIf.png" HEIGHT="200px" /img></A></center>
    <center><span class="captionStyle">If Statement Using "else if" in Arduino</span></center>
 <p>Finally, sometimes there is a need to use an if-statement inside an if-statement. These are effective but not efficient. State machines are the cleaner way to accomplish the same goal. Find more information on state machines <A HREF="users.wpi.edu/~RBE1001book/StateMachines">here</A></p>
@@ -98,13 +98,13 @@ return false;
 
 <h3>While-Loops</h3>
 <h4>Syntax:</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/LoopSyntax.html" 
+<A HREF="Programming_Popups/LoopSyntax.html" 
    onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/While.png" HEIGHT="150px" /img></A>
    
 <h4>What Are They?</h4>
 <p>While-loops are a type of loop that continues as long as a Boolean statement is true. The program runs through the loop checking the condition before running through each time. When the condition is found to be false, the loop “breaks” or stops repeating those statements and moves on to the next statement or function in the program. </p>
 <h4>Example</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
+<A HREF="Programming_Popups/WhileExample.html" 
    onClick="return popup(this, 'While-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/WhileExample.png" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Example of While-Loop Using Arduino</span></center>
    <center><p>Click on program to see how variable values will change</p>
@@ -112,30 +112,30 @@ return false;
 <br>
 <h3>For-Loops</h3>
 <h4>Syntax:</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/LoopSyntax.html" 
+<A HREF="Programming_Popups/LoopSyntax.html" 
    onClick="return popup(this, 'Loop Syntax')"><img src="Programming_Popups/Programming_Pictures/ForSyntax.png" HEIGHT="75px" /img></A>
 <h4>What Are They?</h4>
 <p>For-loops are loops that run a specified number of times before moving on to the next part of the code. For-loops have an index variable that simply keeps track of how many times the loop has run and either increments or decrements at the beginning of the loop. After adjusting the index variable, the loop then checks a conditional statement that compares the index to some pre-defined value; as long as the statement is true, the loop will run.</p>
 <h4>Example</h4>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/WhileExample.html" 
+<A HREF="Programming_Popups/WhileExample.html" 
    onClick="return popup(this, 'For-Loop Example')"><center><img src="Programming_Popups/Programming_Pictures/ForExample.png" HEIGHT="400px" /img></center></A>
 	<center><span class="captionStyle">Example of For-Loop Using Arduino</span></center>
    <center><p>What will this code print? Click on it for the answer</p></center>
 
 <h3>Break and Continue</h3>
 <p>Break is a tool that can stop a loop at any point, usually given a certain condition. When break is triggered, the program will move to the first lines below the loop and execute them. For example:</p>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
+<A HREF="Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/break.png" HEIGHT="25px" /img></center></A>
    <br>
-   <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
+   <A HREF="Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Break')"><center><img src="Programming_Popups/Programming_Pictures/BreakExample.png" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Using Break with Arduino</span></center>
    <br><br>
 <p>Continue is a tool that can alter the progression of a loop given a certain condition. When a loop has a continue condition and the condition is met, the program will skip over all the rest of the code in that loop and jump back to the top of the loop. The loop will then run again from the top. For example:</p>
-<A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
+<A HREF="Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/ContinueSyntax.png" HEIGHT="25px" /img></center></A>
    <br>
-   <A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Programming_Popups/BreakAndContinue.html" 
+   <A HREF="Programming_Popups/BreakAndContinue.html" 
    onClick="return popup(this, 'Continue')"><center><img src="Programming_Popups/Programming_Pictures/Continue.png" HEIGHT="400px" /img></center></A>
    <center><span class="captionStyle">Using Continue in Arduino</span></center>
 
