Adds dropdown menu with pages

--- a/header.html
+++ b/header.html
@@ -12,7 +12,16 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
 			<!-- This is where you add links to pages. Follow the above model -->
+			<li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expand="false">Contents<span class="caret"></span></a>
+				<ul class="dropdown-menu" role="menu">
+					<li><a href="Circuits.html">Circuits</a></li>
+					<li><a href="Programming.html">Programming</a></li>
+					<li><a href="Sensors.html">Sensors</a></li>
+				</ul>
+			</li>
 			</ul>
 		</div>
 	</div>
