--- a/SensorsDepth.html
+++ b/SensorsDepth.html
@@ -41,7 +41,7 @@
 	<div class="row">
 	<div class="col-md-8">
 		<h1>Sensors</h1>
-		<p>Sensing and Interrupt Service Routines</p>
+		<p>Distance Sensors</p>
 	</div>
 	</div>
 	<SCRIPT TYPE="text/javascript">
