--- a/Programming.html
+++ b/Programming.html
@@ -16,7 +16,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Bootrap Theme -->
-	<link href="css/boostrap-theme.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<!-- CSS for this page -->
 	<link href="css/theme.css" rel="stylesheet">
 
@@ -27,6 +27,15 @@
 		$("#header").load("header.html");
 		$("#footer").load("footer.html");
 	});
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56500225-1', 'auto');
+  ga('send', 'pageview');
+
 	</script>
 
 </head>
@@ -73,7 +82,6 @@ return false;
 <br>
 <h2>Constants and Variables</h2>
 <p>Constants are values in a program that cannot change throughout a program’s execution. When a constant is defined, a program essentially just sees the constant and pastes the defined value into the function instead. Constants can be initialized using pound-define (#define) and are usually declared in all capital letters. Variables are locations in memory for storing values and can change over time. All variables have a type (int, long, char, etc.) and a visibility: global or local. Further, variables in certain instances can be static.</p>
-
 
       <A HREF="Programming_Popups/Local&Global.html" 
    onClick="return popup(this, 'Local and Global Variables')"><center><img src="Programming_Popups/Programming_Pictures/Local&Global.png"  HEIGHT="400px" /img></center></A>
