Fix typos in Circuits

--- a/Circuits.html
+++ b/Circuits.html
@@ -16,7 +16,7 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Bootrap Theme -->
-	<link href="css/boostrap-theme.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 	<!-- CSS for this page -->
 	<link href="css/theme.css" rel="stylesheet">
 
@@ -213,7 +213,7 @@ node with any unknown values left as variables.</p>
 <TABLE>
 <TR>
 	<TD ALIGN=50%><img src="Circuit_Pictures/KCL.png" HEIGHT="100px" /img></TD>
-	<TD ALIGN=50%><img src="Circuit_Pictures/currents.png" HEIGHT="200px" /img></TD>
+	<TD ALIGN=50%><img src="Circuit_Pictures/Currents.png" HEIGHT="200px" /img></TD>
 </TR>
 </TABLE>
 <br>
